Multiplier should be a prime number (16 isn't). Why not just use the most closest hash?
git-svn-id: https://svn.apache.org/repos/asf/james/hupa/trunk@1173730 13f79535-47bb-0310-9956-ffa450edef68